@@ -2149,7 +2149,7 @@ D.~Morrissey,
 A.~Pukhov, M.~Ramage,
 R.~Ruiz de Austri, 
 S.~Sekmen, A.~Sheplyakov, D.~Shih, P.~Slavich, P.~Skands, J.~Smidt, C.~Tamarit, 
-S.~Tetsuo, 
+S.~Tetsuo, A.~Voigt,
 T.~Watari and A.~Wingerter
 for bug finding and coding suggestions, I.~Gafton, J. Holt, F. Krauss,
 D. Sanford, C. Wymant and F. Yu for
